argo-events/gateway-replay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: # kpt-merge: replay/replay-gateway
  name: replay-gateway
  namespace: replay
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|Gateway|replay|replay-gateway'
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      number: 80
      name: http
      protocol: HTTP
