argo-events/virtualservice-replay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: replay/replay-virtualservice
  name: replay-virtualservice
  namespace: replay
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.istio.io|VirtualService|replay|replay-virtualservice'
spec:
  hosts:
  - "*"
  gateways:
  - replay-gateway
  http:
  - match:
    - uri:
        prefix: /replay
    route:
    - destination:
        port:
          number: 12000 # can be omitted if it's the only port for reviews
        host: webhook-eventsource-svc.replay.svc.cluster.local
